# loss-of-control-definition

./: CLAUDE.md  CLAUDE_CODE_HANDOFF.md  papers.yaml  pyproject.toml  requirements.txt  seed_terms.yaml  seed_terms_v2.yaml
notebooks/: 01_extract_text.ipynb  02_task_1a.ipynb  03_task_1b.ipynb  04_task_1d.ipynb  05_task_2a.ipynb  06_task_2b.ipynb  07_task_2c.ipynb
prompts/: prompt_1a_v1.txt  prompt_1a_v2.txt  prompt_1b_v1.txt  prompt_1d_v1.txt  prompt_2a_v1.txt  prompt_2b_v1.txt  prompt_2c_v1.txt  prompt_2c_v2.txt
src/: extract_text.py  generate_review.py  run_stage.py
src/utils/: hf_client.py  prompt.py  quote_verify.py
